test/sematest/valid/largest_int.java
class A {
  public static void main(String[] args) {
    System.out.println(2147483648);
  }
}