test/sematest/invalid/invalid_condition2.java
class A {
  public static void main(String[] args) {
    while (null){
      System.out.println(3);
    }
  }
}